2003-09-04  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b60

	* Further on my fix from 1.4.1-cvs-b55.  Turns out that I should have
	  changed the album data protocol back then and forced an upgrade, but
	  didn't.  I'm bumping the album data version to 16 now which will
	  trigger an upgrade and removing the raw_filesize value from the Image
	  class altogether.  Now we'll calculate that on the fly (which will
	  take care of any lingering data mistmatches between -b9 and -b10 as
	  well as resolve any instances where the value was never set in the
	  first place.

2003-09-05  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b59

	* Language update: Swedish (sv_SE)

2003-09-04  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b58

	* Language update: Polish (pl_PL)

	* New Language: Danish (da_DK)

2003-09-04  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b57

        * Fixed bug in voting where votes were not recorded if there is only 
          one choice.

2003-09-04  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b56

	* Synced all languages against latest changes

	* Language update: German (de_DE), Finnish (fi_FI)
	  Note: The German Update is also a Bugfix

        * Fixed incorrect language names (zh_TW), (fi_FI)

2003-09-03 Bharat Mediratta <bharat@menalto.com> 1.4.1-cvs-b55

	* Worked around a PHP serialization bug where serialize() stores 
	  decimal values with commas in de_DE, but unserialize() can't handle
	  that format.  To avoid this issue, we don't use decimal values. This
	  also turned up an issue in Album::save() where if we failed to save
	  photos.dat we'd continue onwards and try to save album.dat (including
	  the photos data there), when instead we should fail.
		- Removed file size rounding code from classes/Image.php
		- Adjusted move_photo.php to expect file sizes in bytes
		- Improved classes/Album.php's save() method

2003-09-03  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b54
	