@@ -96,12 +96,16 @@ foreach ($constants as $key => $val) {
 			 $val["type"] == "separator")) { 
 		continue;
 	}
-	if (ereg("^(..*)\[(.*)\]$", $key, $matches)) {
-		$line='$real = $'. $matches[1] . '["' . $matches[2] . '"];';
+	$bracketStart = strpos($key, '[');
+	$bracketEnd = strpos($key, ']');
+	if ($bracketStart > 0 && $bracketEnd > 0) {
+	        $line='$real = $'. substr($key, 0, $bracketStart) . '["' .
+		    substr($key, $bracketStart+1, $bracketEnd - $bracketStart - 1) . '"];';
 		eval($line);
 	} else {
 		$real = $$key;
 	}
+
         if (get_magic_quotes_gpc()) {
 		$real = array_stripslashes($real);
 	}
@@ -137,9 +141,10 @@ foreach ($constants as $key => $val) {
 		}
 
 		if (isset($constants[$key]["no-trailing-slash"])) {
-			$real = ereg_replace("\/$", "", $real);
-			/* Catch windows paths too. */
-			$real = ereg_replace("\\$", "", $real);
+			$lastChar = $real[strlen($real)-1];
+			if ($lastChar == '/' || $lastChar == '\\') {
+				$real = substr($real, 0, -1);
+			}
 		}
 
 		if (isset($constants[$key]["must-be-url"])) {
